# uCAN

./: .flake8  .gitignore  AUDIT_CODE_VIOLATIONS.txt  AUDIT_MAIN_CPP.md  AUDIT_README.md  AUDIT_REFACTORING_EXAMPLES.md  AUDIT_SUMMARY.txt  AUDIT_VIOLATIONS_VISUAL.txt  BUILD_VERIFICATION_REPORT.md  CHANGELOG.md  CLAUDE.md  FIRMWARE_ANALYSIS_REPORT.md  Makefile  PROTOCOL_COMPLIANCE_REVIEW.md  PROTOCOL_FIXES_NEEDED.md  PROTOCOL_MISMATCH_FIX_SUMMARY.md  README.md  REMAINING_TEST_ISSUES.md  firmware_analysis.txt  fix_main.py  fix_main.sed  fix_main_v2.py  parser_config.yaml  platformio.ini  pyproject.toml  run_checks.sh  test_runner.sh  tui.md
.github/workflows/: build-firmware.yml
can_tui/: LICENSE  PROTOCOL.md  README.md  __init__.py  app.py  cli.py  main.py  pyproject.toml  requirements.txt
can_tui/models/: __init__.py  can_message.py
can_tui/parsers/: __init__.py  base.py  registry.py
can_tui/parsers/builtin/: __init__.py  raw.py
can_tui/parsers/custom/: __init__.py  example_sensor.py  wiring_harness.py  wiring_harness_switch.py
can_tui/services/: __init__.py  serial_service.py
can_tui/tests/: test_filter_simple.py  test_message_filter.py  test_parser.py  test_parser_simple.py  test_protocol_parsing.py  test_switch_view.py  test_view_settings.py
can_tui/views/: __init__.py  base.py  base_view.py  discovery.py  modern_registry.py  registry.py  switch_view.py  view_console.py  view_harness_switch.py
can_tui/widgets/: __init__.py  command_input.py  custom_header.py  help_modal.py  id_filter_widget.py  message_log.py  settings_modal.py  sidebar.py  status_bar.py  switch_view.py  toast.py  view_settings_modal.py
docs/: ACTION_MANAGER_ARCHITECTURE.md  CAN_FD_ANALYSIS.md  CAN_TRANSCEIVER_COMPARISON.md  CONFIG_SYSTEM.md  DESIGN_ACTION_PARAMETER_MAPPING.md  DEVELOPER.md  DOCUMENTATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  MULTI_STEP_ACTIONS_DESIGN.md  PHASE1_SUMMARY.md  PHASE1_TODO.md  PLAN.md  PROTOCOL.md  PROTOCOL_V2_DECISIONS.md  PROTOCOL_V2_SUMMARY.md  RP2040_FLASH_STORAGE.md  RP2040_HARDWARE.md  SAMD51_PIN_REFERENCE.md  SN65HVD230_TO_CANFD_MIGRATION.md  TODO.md
python/: analyze_firmware.py
scripts/: generate_uf2.py  pioasm.py
src/: main.cpp  main.cpp.bak
src/actions/: action_data_buffer.cpp  action_data_buffer.h  action_helpers.cpp  action_manager.cpp  action_manager.h  action_manager_base.cpp  action_manager_base.h  action_manager_factory.h  action_types.h  action_types.h.bak  custom_command.cpp  custom_command.h  param_mapping.cpp  param_mapping.h  pin_manager.cpp  pin_manager.h
src/boards/: board_config.h  board_factory.cpp  board_interface.h  board_registry.h
src/boards/esp32/: generic.h  t_can485.h  t_panel.h
src/boards/feather_m4_can/: board_impl.cpp
src/boards/rpi_pico/: board_impl.cpp  board_impl.h  rpi_pico.h
src/boards/samd51/: board_impl.h  feather_m4_can.h
src/boards/t_can485/: board_config.h  board_impl.cpp  board_impl.h
src/boards/t_panel/: board_config.h  board_impl.cpp  board_impl.h
src/capabilities/: board_capabilities.h  capability_query.cpp  rp2040_capabilities.cpp  samd51_capabilities.cpp  samd51_default_rules.cpp  samd51_flash_storage.cpp
src/capabilities/esp32/: esp32_action_defs.cpp  esp32_action_manager.cpp  esp32_action_manager.h  esp32_capabilities.cpp  esp32_flash_storage.cpp
src/capabilities/rp2040/: rp2040_action_defs.cpp  rp2040_action_manager.cpp  rp2040_action_manager.h  rp2040_capabilities.cpp  rp2040_config_loader.cpp  rp2040_config_loader.h  rp2040_flash_storage.cpp
src/capabilities/samd51/: samd51_action_defs.cpp  samd51_action_manager.cpp  samd51_action_manager.h  samd51_capabilities.cpp  samd51_default_rules.cpp  samd51_flash_storage.cpp  samd51_pin_caps.cpp  samd51_pin_caps.h
src/configs/: battery_solar_config.h  golf_cart_config.h
src/hal/: can_factory.h  can_interface.h  esp32_can.cpp  esp32_can.h  i2c_interface.h  platform_config.h  pwm_interface.h  rp2040_can.cpp  rp2040_can.h  samd51_can.cpp  samd51_can.h  samd51_i2c.cpp  samd51_i2c.h  samd51_pwm.cpp  samd51_pwm.h
src/utils/: pin_error_logger.h
tests/: QUICKSTART.md  README.md  TEST_ORGANIZATION.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_action_definitions.py  test_action_execution_reporting.py  test_action_reporting.py  test_basic_commands.py  test_can_messaging.py  test_data_matching.py  test_debug_pytest.py  test_device_name.py  test_double_get.py  test_error_handling.py  test_gpio_actions.py  test_neopixel.py  test_no_timeout_change.py  test_phase1_buffer.py  test_phase1_i2c.py  test_pwm_actions.py  test_reopen_port.py  test_rule_management.py  test_simple_name.py
tests/unit/: README.md  __init__.py  protocol_helpers.py  test_command_validation.py  test_message_formatting.py  test_protocol_parsing.py
